@@ -17,7 +17,10 @@
  ******************************************************************************
  *
  * $Log$
- * Revision 1.13  2007-02-24 16:58:17  cbalint
+ * Revision 1.14  2016-07-08 10:22:55  erouault
+ * Fix various compilation problems on Windows (contributed by Jerome Siot)
+ *
+ * Revision 1.13  2007/02/24 16:58:17  cbalint
  *     Clear olso tilestruct while freeing memory in dyn_freelayerpriv()
  *     glibc mtrace() reports zero malloc problems now.
  *     Thanks to djdejohn for the report !
@@ -179,8 +182,11 @@ void dyn_freelayerpriv(lpriv)
       lpriv->buffertile = NULL;
     }
     
+#ifdef notdef
+   /* FIXME? ecs_TileDeleteAllLines does not exist */
    /* empty tilestruct */
    ecs_TileDeleteAllLines (&(lpriv->tilestruct));
+#endif
     
     if (lpriv->ff != NULL) 
       free(lpriv->ff);
